torch-compiler/src/test/resources/negative/ClassWithNoAnnotations.java
package negative;

public class EntityWithNoAnnotations{
    Long id;
    String name;
    Long accountNumber;
}